--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,18 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
+/.idea
+/.vscode
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
