--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "nyholm/psr7": "^1.8",
         "psr/http-message": "^1.0",
+        "railsware/mailtrap-php": "^1.8",
+        "symfony/http-client": "^7.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
